[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "givecalc"
version = "0.1.0"
description = "Calculate how charitable giving affects taxes"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "streamlit",
    "policyengine-us>=1.155.0",
    "plotly",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/PolicyEngine/givecalc"
Repository = "https://github.com/PolicyEngine/givecalc"

[tool.setuptools.packages.find]
include = ["givecalc*"]
exclude = ["tests*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 79
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 79
